--- a/watch.html
+++ b/watch.html
@@ -35,7 +35,9 @@
 
 <!-- Main Section (Home) -->
 <main class="watch-box">
-  <iframe width="1232" height="693" src="https://www.youtube.com/embed/1jmj3Ecuj-I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="aspect-ratio">
+    <iframe width="1232" height="693" src="https://www.youtube.com/embed/1jmj3Ecuj-I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
 </main>
 
 <!-- Footer -->
