image compression for headshots for faster loading

--- a/headshots.html
+++ b/headshots.html
@@ -46,7 +46,7 @@
   <img src="images/headshots/headshot_5.jpg" alt="headshot_5" class="headshot-photo can-modal-photo">
   <img src="images/headshots/headshot_6.jpg" alt="headshot_6" class="headshot-photo can-modal-photo">
   <img src="images/headshots/headshot_7.jpg" alt="headshot_7" class="headshot-photo can-modal-photo">
-  <img src="images/home_photo.jpg" alt="home photo" class="headshot-photo can-modal-photo">
+  <img src="images/headshots/headshot_8.jpg" alt="headshot_8" class="headshot-photo can-modal-photo">
 </main>
 
 <!-- Footer -->
