image compression for headshots for faster loading [fixed]

--- a/headshots.html
+++ b/headshots.html
@@ -35,7 +35,7 @@
 
 <!-- Main Section (Home) -->
 <main class="headshots-box modal-holder">
-  <div class="modal-photo">
+  <div class="modal-photo full-path">
     <img>
     <button class="modal-close"></button>
   </div>
