--- a/home.html
+++ b/home.html
@@ -8,6 +8,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/gwn7cyv.css">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 
