--- a/portfolio.html
+++ b/portfolio.html
@@ -55,14 +55,7 @@
         <img src="images/portfolio/portfolio_1-2.jpg" alt="portfolio_1-2" class="carousel__image can-modal-photo">
       </li>
 
-      <li class="carousel__slide current-slide">
-        <img src="images/portfolio/portfolio_2-1.jpg" alt="portfolio_2-1" class="carousel__image can-modal-photo">
-      </li>
-      <li class="carousel__slide carousel__slide--semi">
-        <img src="images/portfolio/portfolio_2-2.jpg" alt="portfolio_2-2" class="carousel__image can-modal-photo">
-      </li>
-
-      <li class="carousel__slide current-slide">
+      <li class="carousel__slide">
         <img src="images/portfolio/portfolio_3-1.jpg" alt="portfolio_3-1" class="carousel__image can-modal-photo">
       </li>
       <li class="carousel__slide carousel__slide--semi">
@@ -73,74 +66,60 @@
         <img src="images/portfolio/portfolio_long_1.jpg" alt="portfolio_long_1" class="carousel__image--long can-modal-photo">
       </li>
 
-      <li class="carousel__slide current-slide">
+      <li class="carousel__slide">
         <img src="images/portfolio/portfolio_4-1.jpg" alt="portfolio_4-1" class="carousel__image can-modal-photo">
       </li>
       <li class="carousel__slide carousel__slide--semi">
-        <img src="images/portfolio/portfolio_4-2.jpg" alt="portfolio_4-2" class="carousel__image can-modal-photo">
+        <img src="images/portfolio/portfolio_4-2.jpeg" alt="portfolio_4-2" class="carousel__image can-modal-photo">
       </li>
 
-      <li class="carousel__slide current-slide">
+      <li class="carousel__slide">
         <img src="images/portfolio/portfolio_5-1.jpg" alt="portfolio_5-1" class="carousel__image can-modal-photo">
       </li>
       <li class="carousel__slide carousel__slide--semi">
         <img src="images/portfolio/portfolio_5-2.jpg" alt="portfolio_5-2" class="carousel__image can-modal-photo">
       </li>
 
-      <li class="carousel__slide current-slide">
+      <li class="carousel__slide">
         <img src="images/portfolio/portfolio_6-1.jpg" alt="portfolio_6-1" class="carousel__image can-modal-photo">
       </li>
       <li class="carousel__slide carousel__slide--semi">
         <img src="images/portfolio/portfolio_6-2.jpg" alt="portfolio_6-2" class="carousel__image can-modal-photo">
       </li>
 
-      <li class="carousel__slide current-slide">
+      <li class="carousel__slide">
         <img src="images/portfolio/portfolio_7-1.jpg" alt="portfolio_7-1" class="carousel__image can-modal-photo">
       </li>
       <li class="carousel__slide carousel__slide--semi">
         <img src="images/portfolio/portfolio_7-2.jpg" alt="portfolio_7-2" class="carousel__image can-modal-photo">
       </li>
 
-      <li class="carousel__slide current-slide">
-        <img src="images/portfolio/portfolio_8-1.jpeg" alt="portfolio_8-1" class="carousel__image can-modal-photo">
-      </li>
-      <li class="carousel__slide carousel__slide--semi">
-        <img src="images/portfolio/portfolio_8-2.jpeg" alt="portfolio_8-2" class="carousel__image can-modal-photo">
-      </li>
-
-      <li class="carousel__slide current-slide">
+      <li class="carousel__slide">
         <img src="images/portfolio/portfolio_9-1.jpg" alt="portfolio_9-1" class="carousel__image can-modal-photo">
       </li>
       <li class="carousel__slide carousel__slide--semi">
         <img src="images/portfolio/portfolio_9-2.jpg" alt="portfolio_9-2" class="carousel__image can-modal-photo">
       </li>
 
-      <li class="carousel__slide current-slide">
+      <li class="carousel__slide">
         <img src="images/portfolio/portfolio_10-1.jpg" alt="portfolio_10-1" class="carousel__image can-modal-photo">
       </li>
       <li class="carousel__slide carousel__slide--semi">
         <img src="images/portfolio/portfolio_10-2.jpg" alt="portfolio_10-2" class="carousel__image can-modal-photo">
       </li>
 
-      <li class="carousel__slide current-slide">
+      <li class="carousel__slide">
         <img src="images/portfolio/portfolio_11-1.jpg" alt="portfolio_11-1" class="carousel__image can-modal-photo">
       </li>
       <li class="carousel__slide carousel__slide--semi">
         <img src="images/portfolio/portfolio_11-2.jpg" alt="portfolio_11-2" class="carousel__image can-modal-photo">
       </li>
 
-      <li class="carousel__slide current-slide">
+      <li class="carousel__slide">
         <img src="images/portfolio/portfolio_12-1.jpg" alt="portfolio_12-1" class="carousel__image can-modal-photo">
       </li>
       <li class="carousel__slide carousel__slide--semi">
         <img src="images/portfolio/portfolio_12-2.jpg" alt="portfolio_12-2" class="carousel__image can-modal-photo">
-      </li>
-
-      <li class="carousel__slide current-slide">
-        <img src="images/portfolio/portfolio_13-1.jpg" alt="portfolio_13-1" class="carousel__image can-modal-photo">
-      </li>
-      <li class="carousel__slide carousel__slide--semi">
-        <img src="images/portfolio/portfolio_13-2.jpg" alt="portfolio_13-2" class="carousel__image can-modal-photo">
       </li>
 
     </ul>
@@ -157,24 +136,15 @@
     <button class="carousel__indicator carousel__indicator--semi"></button>
 
     <button class="carousel__indicator"></button>
-    <button class="carousel__indicator carousel__indicator--semi"></button>
 
     <button class="carousel__indicator"></button>
+    <button class="carousel__indicator carousel__indicator--semi"></button>
 
     <button class="carousel__indicator"></button>
     <button class="carousel__indicator carousel__indicator--semi"></button>
 
     <button class="carousel__indicator"></button>
     <button class=" carousel__indicator carousel__indicator--semi"></button>
-
-    <button class="carousel__indicator"></button>
-    <button class="carousel__indicator carousel__indicator--semi"></button>
-
-    <button class="carousel__indicator"></button>
-    <button class="carousel__indicator carousel__indicator--semi"></button>
-
-    <button class="carousel__indicator"></button>
-    <button class="carousel__indicator carousel__indicator--semi"></button>
 
     <button class="carousel__indicator"></button>
     <button class="carousel__indicator carousel__indicator--semi"></button>
