adding compressed images to portfolio, also rearranging portfolio

--- a/headshots.html
+++ b/headshots.html
@@ -38,10 +38,13 @@
 
 <!-- Main Section (Home) -->
 <main class="headshots-box modal-holder">
+
+  <!-- Modal -->
   <div class="modal-photo full-path">
     <img>
     <button class="modal-close"></button>
   </div>
+
   <img src="images/headshots/headshot_1.jpg" alt="headshot_1" class="headshot-photo can-modal-photo">
   <img src="images/headshots/headshot_2.jpg" alt="headshot_2" class="headshot-photo can-modal-photo">
   <img src="images/headshots/headshot_3.jpg" alt="headshot_3" class="headshot-photo can-modal-photo">
