--- a/portfolio.html
+++ b/portfolio.html
@@ -38,10 +38,13 @@
 
 <!-- Main Section (Home) -->
 <main class="portfolio-carousel modal-holder">
-  <div class="modal-photo">
+
+  <!-- Modal -->
+  <div class="modal-photo full-path">
     <img>
     <button class="modal-close"></button>
   </div>
+
   <button class="carousel__button carousel__button--left">
     <img src="images/ui/arrow_left.png" alt="arrow_left">
   </button>
@@ -115,13 +118,6 @@
         <img src="images/portfolio/portfolio_11-2.jpg" alt="portfolio_11-2" class="carousel__image can-modal-photo">
       </li>
 
-      <li class="carousel__slide">
-        <img src="images/portfolio/portfolio_12-1.jpg" alt="portfolio_12-1" class="carousel__image can-modal-photo">
-      </li>
-      <li class="carousel__slide carousel__slide--semi">
-        <img src="images/portfolio/portfolio_12-2.jpg" alt="portfolio_12-2" class="carousel__image can-modal-photo">
-      </li>
-
     </ul>
   </div>
   <button class="carousel__button carousel__button--right">
@@ -145,9 +141,6 @@
 
     <button class="carousel__indicator"></button>
     <button class=" carousel__indicator carousel__indicator--semi"></button>
-
-    <button class="carousel__indicator"></button>
-    <button class="carousel__indicator carousel__indicator--semi"></button>
 
     <button class="carousel__indicator"></button>
     <button class="carousel__indicator carousel__indicator--semi"></button>
