--- a/home.html
+++ b/home.html
@@ -5,6 +5,9 @@
 
   <title>Julia Motta</title>
 
+  <!-- <meta name="description" content="Julia Motta is "> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/gwn7cyv.css">
