--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
 
   <title>Julia Motta</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/gwn7cyv.css">
@@ -50,6 +52,14 @@
   </button>
   <div class="carousel__track-container">
     <ul class="carousel__track">
+
+      <!-- Wrap Slide -->
+      <li class="carousel__slide">
+        <img>
+      </li>
+      <li class="carousel__slide">
+        <img>
+      </li>
 
       <li class="carousel__slide current-slide">
         <img src="images/portfolio/portfolio_1-1.jpg" alt="portfolio_1-1" class="carousel__image can-modal-photo">
@@ -116,6 +126,14 @@
       </li>
       <li class="carousel__slide carousel__slide--semi">
         <img src="images/portfolio/portfolio_11-2.jpg" alt="portfolio_11-2" class="carousel__image can-modal-photo">
+      </li>
+
+      <!-- Wrap Slide -->
+      <li class="carousel__slide">
+        <img>
+      </li>
+      <li class="carousel__slide">
+        <img>
       </li>
 
     </ul>
