--- a/watch.html
+++ b/watch.html
@@ -5,6 +5,8 @@
 
   <title>Julia Motta</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/gwn7cyv.css">
@@ -39,7 +41,7 @@
 <!-- Main Section (Home) -->
 <main class="watch-box">
   <div class="aspect-ratio">
-    <iframe width="1232" height="693" src="https://www.youtube.com/embed/1jmj3Ecuj-I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1232" height="693" src="https://www.youtube.com/embed/Re-4S-GREKw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </main>
 
