updated agency email, website dates and first portfolio images

--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
     <h1>Julia Motta</h1>
     <div class="agency">
       <p>The Jackson Agency<br>
-      booking@jacksonagency.com<br>
+      tj@tja.agency<br>
       (818) 538-5305</p>
     </div>
     <div class="contact">
@@ -59,7 +59,7 @@
 
 <!-- Footer -->
 <footer>
-  <p>© Julia Motta - 2019</p>
+  <p>© Julia Motta - <script>document.write(new Date().getFullYear())</script></p>
 </footer>
 
 </body>
