--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,13 @@
       </li>
 
       <li class="carousel__slide current-slide">
+        <img src="images/portfolio/JM_Portfolio_1.jpg" alt="portfolio_JM_1" class="carousel__image can-modal-photo">
+      </li>
+      <li class="carousel__slide carousel__slide--semi">
+        <img src="images/portfolio/JM_Portfolio_2.jpg" alt="portfolio_JM_2" class="carousel__image can-modal-photo">
+      </li>
+
+      <li class="carousel__slide">
         <img src="images/portfolio/portfolio_1-1.jpg" alt="portfolio_1-1" class="carousel__image can-modal-photo">
       </li>
       <li class="carousel__slide carousel__slide--semi">
@@ -150,6 +157,9 @@
     <button class="carousel__indicator carousel__indicator--semi"></button>
 
     <button class="carousel__indicator"></button>
+    <button class="carousel__indicator carousel__indicator--semi"></button>
+
+    <button class="carousel__indicator"></button>
 
     <button class="carousel__indicator"></button>
     <button class="carousel__indicator carousel__indicator--semi"></button>
@@ -177,7 +187,7 @@
 
 <!-- Footer -->
 <footer>
-  <p>© Julia Motta - 2019</p>
+  <p>© Julia Motta - <script>document.write(new Date().getFullYear())</script></p>
 </footer>
 
 <script src="js/modal_photo.js" type="text/javascript"></script>
