--- a/watch.html
+++ b/watch.html
@@ -47,7 +47,7 @@
 
 <!-- Footer -->
 <footer>
-  <p>© Julia Motta - 2019</p>
+  <p>© Julia Motta - <script>document.write(new Date().getFullYear())</script></p>
 </footer>
 
 </body>
