--- a/headshots.html
+++ b/headshots.html
@@ -59,7 +59,7 @@
 
 <!-- Footer -->
 <footer>
-  <p>© Julia Motta - 2019</p>
+  <p>© Julia Motta - <script>document.write(new Date().getFullYear())</script></p>
 </footer>
 
 <script src="js/modal_photo.js" type="text/javascript"></script>
