added second video and selection bar to Watch page

--- a/watch.html
+++ b/watch.html
@@ -38,10 +38,23 @@
   <span class="hor-line"></span>
 </header>
 
-<!-- Main Section (Home) -->
+<!-- Main Section (Watch) -->
 <main class="watch-box">
   <div class="aspect-ratio">
     <iframe width="1232" height="693" src="https://www.youtube.com/embed/1jmj3Ecuj-I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+
+  <span class="hor-line"></span>
+
+  <div class="vid-selector">
+    <div class="vid-thumbnail vid-selectable">
+      <img src="https://img.youtube.com/vi/1jmj3Ecuj-I/maxresdefault.jpg" alt="thumb_1" class="vid-thumbnail-img">
+      <img src="images/ui/play.png" alt="play-icon" class="vid-play-img">
+    </div>
+    <div class="vid-thumbnail vid-selectable">
+      <img src="https://img.youtube.com/vi/mhlXylwax0U/maxresdefault.jpg" alt="thumb_2" class="vid-thumbnail-img">
+      <img src="images/ui/play.png" alt="play-icon" class="vid-play-img">
+    </div>
   </div>
 </main>
 
@@ -49,6 +62,8 @@
 <footer>
   <p>© Julia Motta - <script>document.write(new Date().getFullYear())</script></p>
 </footer>
+
+<script src="js/vid_selectable.js" type="text/javascript"></script>
 
 </body>
 </html>
