removed mentions of the jackson agency on main page

--- a/home.html
+++ b/home.html
@@ -45,11 +45,11 @@
   <img src="images/home_photo.jpg" alt="home photo" class="home-photo">
   <div class="agency-contact">
     <h1>Julia Motta</h1>
-    <div class="agency">
+    <!-- <div class="agency">
       <p>The Jackson Agency<br>
       tj@tja.agency<br>
       (818) 538-5305</p>
-    </div>
+    </div> -->
     <div class="contact">
       <p>Contact me at:<br>
       juliamottacontact@gmail.com</p>
