updated headshot photos

--- a/headshots.html
+++ b/headshots.html
@@ -55,6 +55,9 @@
   <img src="images/headshots/headshot_6.jpg" alt="headshot_6" class="headshot-photo can-modal-photo">
   <img src="images/headshots/headshot_7.jpg" alt="headshot_7" class="headshot-photo can-modal-photo">
   <img src="images/headshots/headshot_8.jpg" alt="headshot_8" class="headshot-photo can-modal-photo">
+  <img src="images/headshots/headshot_9.jpg" alt="headshot_9" class="headshot-photo can-modal-photo">
+  <img src="images/headshots/headshot_10.jpg" alt="headshot_10" class="headshot-photo can-modal-photo">
+  <img src="images/headshots/headshot_11.jpg" alt="headshot_11" class="headshot-photo can-modal-photo">
 </main>
 
 <!-- Footer -->
